<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Bowling Scorecard</string>
    <string name="hello_world">Welcome to the Bowling Scorecard app.  Store all of your bowling scores for the season.</string>
    <string name="action_settings">Settings</string>
    <string name="BowlingDate">Bowling Date:</string>
    <string name="Game1">Game 1:</string>
    <string name="Game2">Game 2:</string>
    <string name="Game3">Game 3:</string>
    <string name="action_add">Add</string>
    <string name="action_stats">Score Statistics</string>
    <string name="score1">199</string>
    <string name="score2">299</string>
    <string name="score3">399</string>
    <string name="Date">Date</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="Developer">Designed and Developed by</string>

</resources>
