<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical" >


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:text="@string/Date"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvScore1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="62dp"
            android:layout_toRightOf="@+id/tvWelcome"
            android:text="@string/score1"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvScore2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="35dp"
            android:layout_toRightOf="@+id/tvScore1"
            android:text="@string/score2"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvScore3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="35dp"
            android:layout_toRightOf="@+id/tvScore2"
            android:text="@string/score3"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/tvScore3"
            android:text="Total: 999"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvAvg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/tvTot"
            android:text="Avg: 999"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvSeasonAvg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/tvAvg"
            android:text="Season Avg: 999"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>
