<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Cancel"
            android:textColor="#231CFF"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:id="@+id/tvCancelBtn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Save"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_marginRight="10dp"
            android:textColor="#231CFF"
            android:id="@+id/tvSaveBtn" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvBName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="&lt;Bowler's Name&gt;"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tvBDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/BowlingDate"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btnDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="Date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:onClick="showDatePickerDialog"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            >

            <TextView
                android:id="@+id/tvScore1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Game1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editTextScore1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:width="50dp" >

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            >

            <TextView
                android:id="@+id/tvScore2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Game2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editTextScore2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:width="50dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            >

            <TextView
                android:id="@+id/tvScore3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Game3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editTextScore3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:width="50dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:id="@+id/tvTotal1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total:"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvTotalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="TotalValue"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

    
        <TextView
            android:id="@+id/tvAverage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="Average:"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvAverageValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="AverageValue"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
    
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/tvDeleteBtn"
        android:text="Delete"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#231CFF"
         />

</LinearLayout>
